--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,3 +2,8 @@ theme = catppuccin-mocha
 
 font-family = CaskaydiaCove Nerd Font Mono
 font-size = 12
+
+clipboard-read = allow
+clipboard-write = allow
+copy-on-select = clipboard
+
