--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -7,3 +7,17 @@ clipboard-read = allow
 clipboard-write = allow
 copy-on-select = clipboard
 
+keybind = ctrl+b>h=goto_split:left
+keybind = ctrl+b>j=goto_split:bottom
+keybind = ctrl+b>k=goto_split:top
+keybind = ctrl+b>l=goto_split:right
+
+keybind = ctrl+b>shift+h=new_split:left
+keybind = ctrl+b>shift+j=new_split:down
+keybind = ctrl+b>shift+k=new_split:up
+keybind = ctrl+b>shift+l=new_split:right
+
+keybind = ctrl+b>n=next_tab
+keybind = ctrl+b>p=previous_tab
+
+window-save-state = always
