--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+unbind r 
+bind r source-file ~/tmux/.tmux.conf
+
 #### Fix Colors ####
 set -g default-terminal "screen-256color"
 set -as terminal-features ",xterm-256color:RGB"
@@ -8,3 +11,15 @@ set-option -g allow-rename off # disable auto rename
 
 #### Display Popups ####
 bind C-p display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "fish"
+
+#### VIM Bindings ####
+bind-key v split-window -h
+bind-key s split-window -v
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+#### Theme ####
+run ~/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+set -g @catppuccin_flavor 'mocha'
