reset tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 unbind r 
-bind r source-file ~/tmux/.tmux.conf
+bind r source-file ~/.tmux.conf
 
 #### Fix Colors ####
 set -g default-terminal "screen-256color"
@@ -10,7 +10,7 @@ set-option -g set-clipboard on
 set-option -g allow-rename off # disable auto rename
 
 #### Display Popups ####
-bind C-p display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "fish"
+bind -r p run-shell 'tmux display-popup -w80% -h80% -E "tmux new-session -A -s scratch -c #{pane_current_path} fish"'
 
 #### VIM Bindings ####
 bind-key v split-window -h
@@ -20,6 +20,11 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-#### Theme ####
-run ~/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+#### Plugins ####
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @catppuccin_flavor 'mocha'
+
+run '~/.tmux/plugins/tpm/tpm'
